--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 h1 {
 	font-size: 40px;
-	margin: 0 auto;
 	text-align: center;
 }
 #introForm {
-	margin: 0 auto;
 	text-align: center;
+}
+.introQuestions {
+	margin: 0 auto;
 }
 .intro1, .intro2, .intro3 {
 	font-size: 50px;
@@ -17,17 +18,14 @@ h1 {
 	font-size: 70px;
 	text-align: center;
 	margin-top: 60px;
-	margin-bottom: 60px;
 	display: none;
 }
-.btn {
+.buttonContinue {
+	top: 500px;
+	text-align: center;
+	position: absolute;
+}
 
-}
-.col-md-4 {
-	border-left: 1px solid black;
-	border-radius: 5px;
-	margin-bottom: 20px;
-}
 .startForm {
 	display: none;
 	text-align: center;
