--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ h1 {
 	top: 500px;
 	text-align: center;
 	position: absolute;
+	cursor: pointer;
 }
 
 .startForm {
@@ -41,6 +42,18 @@ h1 {
 	display: none;
 	margin-top: 20px;
 }	
+#results {
+	margin: 0 auto;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+}
+.column {
+	width: 33.3%;
+	margin: 0 auto;
+}
 .square {
 	background-color: yellow;
 }
