--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 h1 {
-	font-size: 40px;
+	font-size: 5em;
 	text-align: center;
+	color: #170F00;
 }
 #introForm {
 	text-align: center;
@@ -13,9 +14,11 @@ h1 {
 	text-align: center;
 	display: none;
 	padding-bottom: 30px;
+	color: #604308;
 }
 .intro4 {
 	font-size: 70px;
+	color: #AA8439;
 	text-align: center;
 	margin-top: 60px;
 	display: none;
@@ -27,6 +30,9 @@ h1 {
 	text-align: center;
 	position: absolute;
 	cursor: pointer;
+	background-color: #AA8439;
+	color: white;
+	padding: 5px;
 }
 
 .startForm {
@@ -43,12 +49,16 @@ h1 {
 }
 .inputsForm {
 	padding-right: 5px;
+	color: #170F00;
+	font-size: 1em;
 }
 .form-control {
 	flex-grow: 2;
 }
 .buttonSubmit {
 	cursor: pointer;
+	background-color: #AA8439;
+	color: white;
 }
 .searchBoxes {
 	margin: 0 auto;
@@ -72,10 +82,31 @@ h1 {
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
+	
 }
 .column {
 	width: 40%;
-	margin: 0 auto;
+	margin: 5px auto;
+	border-radius: 2px;
+	box-shadow: 3px 3px 3px rgba(0, 0, 0, .2);
+	background-color: #FFF1D6;
+}
+.column:hover {
+	transform: scale(1.02, 1.01);
+  transition: transform 0.3s linear;
+}
+.column a {
+	text-decoration: none;
+	font-size: 1.2em;
+	color: #170F00;
+}
+a:hover {
+	color: #AA8439;
+}
+.printDate {
+	font-size: 1.2em;
+	color: #AA8439; 
+	font-weight: 800;
 }
 .form-control {
 	padding-left: 5px;
@@ -88,15 +119,12 @@ h1 {
 }
 .nextPageSection {
 	display: flex;
-	justify-content: space-between;
-	cursor: pointer;
 	width: 40%;
-	margin: 0 auto;
+	margin: 5px auto;
 }
 .nextPage {
 	cursor: pointer;
-	float: right;
-	margin-right: 20%;	
+	margin-left: 40%;
 }
 .previousPage {
 	cursor: pointer;
@@ -111,9 +139,15 @@ h1 {
 	.mobileButtonContinue {
 		display: none;
 	}
+	.mobileBanner {
+		display: none;
+	}
 }
 @media only screen and (max-width: 480px) {
 	.banner {
+		display: none;
+	}
+	.introForm {
 		display: none;
 	}
 	.mobileContinue {
@@ -141,6 +175,5 @@ h1 {
 	}
 	.previousPage {
 		margin-right: 20px;
-	}
-	
-};
+	}	
+}
