--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ a:hover {
 		text-align: center;
 	}
 	.mobileBanner {
-		top: 30%;
+		top: 60%;
 		left: 50%;
 		transform: translate(-50%,-50%);
 		text-align: center;
@@ -181,8 +181,19 @@ a:hover {
 	.column {
 		width: 100%;
 		margin: 0 auto;
+		margin: 5px auto;
+		border-radius: 5px;
+		box-shadow: 3px 3px 3px rgba(0, 0, 0, .2);
+		background-color: #FFF1D6;
 	}
 	.previousPage {
 		margin-right: 20px;
 	}	
+	.mobileButtonContinue {
+		cursor: pointer;
+		background-color: #AA8439;
+		color: #ffffff;
+		padding: 5px;
+		border: none;
+	}
 }
