--- a/style.css
+++ b/style.css
@@ -158,12 +158,12 @@ a:hover {
 		text-align: center;
 	}
 	.mobileBanner {
-		top: 60%;
+		/*top: 60%;
 		left: 50%;
 		transform: translate(-50%,-50%);
 		text-align: center;
 		position: absolute;
-		cursor: pointer;
+		cursor: pointer;*/
 	}
 	.searchBoxes {
 		margin: 0 auto;
