--- a/style.css
+++ b/style.css
@@ -164,6 +164,8 @@ a:hover {
 		text-align: center;
 		position: absolute;
 		cursor: pointer;*/
+		display: flex;
+		flex-direction: row;
 	}
 	.searchBoxes {
 		margin: 0 auto;
