--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ a:hover {
 		position: absolute;
 		cursor: pointer;*/
 		display: flex;
-		flex-direction: row;
+		flex-direction: column;
 	}
 	.searchBoxes {
 		margin: 0 auto;
