--- a/style.css
+++ b/style.css
@@ -158,14 +158,12 @@ a:hover {
 		text-align: center;
 	}
 	.mobileBanner {
-		/*top: 60%;
-		left: 50%;
-		transform: translate(-50%,-50%);
-		text-align: center;
-		position: absolute;
-		cursor: pointer;*/
 		display: flex;
 		flex-direction: column;
+	}
+	.mobileBanner h1 {
+		font-size: 3.5em;
+		margin-top: 5px;
 	}
 	.searchBoxes {
 		margin: 0 auto;
