--- a/style.css
+++ b/style.css
@@ -181,8 +181,8 @@ a:hover {
 		background-color: #FFF1D6;
 	}
 	.column:active {
-		transform: scale(1.01, 1.01);
-  	transition: transform 0.1s linear;
+		transform: scale(1.03, 1.03);
+  	transition: transform 0.2s linear;
 	}
 	.previousPage {
 		margin-right: 20px;
@@ -196,8 +196,8 @@ a:hover {
 		padding: 5px;
 		border: none;
 	}
-	.mobileButtonContinue:active {
+	/*.mobileButtonContinue:active {
 		transform: scale(1.01, 1.01);
   	transition: transform 0.1s linear;	
-	}
+	}*/
 }
