--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1 {
 	display: none;
 }
 .buttonContinue {
-	top: 50%;
+	top: 60%;
 	left: 50%;
 	transform: translate(-50%,-50%);
 	text-align: center;
@@ -93,18 +93,16 @@ h1 {
 	border-radius: 5px;
 	box-shadow: 3px 3px 3px rgba(0, 0, 0, .2);
 	background-color: #FFF1D6;
+	padding-left: 5px;
 }
 .column:hover {
 	transform: scale(1.02, 1.01);
-  transition: transform 0.3s linear;
+  transition: transform 0.2s linear;
 }
 .column a {
 	text-decoration: none;
-	font-size: 1.2em;
+	font-size: 1.3em;
 	color: #170F00;
-}
-a:hover {
-	text-decoration: underline;
 }
 .printDate {
 	font-size: 1.1em;
@@ -115,7 +113,11 @@ a:hover {
 	padding-left: 5px;
 }
 .square {
-	background-color: yellow;
+	background-color: #FF0000;
+	color: #ffffff;
+	border: none;
+	margin-right: 10px;
+	border-radius: 5px;
 }
 .startForm {
 	display: none;
@@ -123,11 +125,11 @@ a:hover {
 .nextPageSection {
 	display: flex;
 	width: 40%;
-	margin: 5px auto;
+	margin: 20px auto;
+	justify-content: flex-end;
 }
 .nextPage {
 	cursor: pointer;
-	margin-left: 40%;
 	background-color: #AA8439; 
 	color: #ffffff;
 	border:none;
@@ -148,13 +150,7 @@ a:hover {
 	.searchBoxes h1 {
 		display: none;
 	}
-	.banner {
-		display: none;
-	}
-	.buttonContinue {
-		display: none;
-	}
-	.introForm {
+	.banner, .buttonContinue, .introForm {
 		display: none;
 	}
 	.mobileContinue {
@@ -199,8 +195,4 @@ a:hover {
 		padding: 5px;
 		border: none;
 	}
-	/*.mobileButtonContinue:active {
-		transform: scale(1.01, 1.01);
-  	transition: transform 0.1s linear;	
-	}*/
 }
