--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+	line-height: 1;
+	font-family: Helvetica, sans-serif;
+}
 h1 {
 	font-size: 5em;
 	text-align: center;
@@ -23,7 +27,23 @@ h1 {
 	margin-top: 60px;
 	display: none;
 }
+.intro5 {
+	width: 40%;
+	margin: 0 auto;
+}
 .buttonContinue {
+	top: 60%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	text-align: center;
+	position: absolute;
+	cursor: pointer;
+	background-color: #AA8439;
+	color: #ffffff;
+	padding: 5px;
+	border: none;
+}
+.buttonExpl {
 	top: 60%;
 	left: 50%;
 	transform: translate(-50%,-50%);
@@ -65,7 +85,6 @@ h1 {
 }
 .searchBoxes {
 	margin: 0 auto;
-	width: 100%;
 	display: flex;
 	flex-direction: column;
 	width: 40%;
@@ -94,6 +113,7 @@ h1 {
 	box-shadow: 3px 3px 3px rgba(0, 0, 0, .2);
 	background-color: #FFF1D6;
 	padding-left: 5px;
+	cursor: pointer;
 }
 .column:hover {
 	transform: scale(1.02, 1.01);
@@ -112,15 +132,29 @@ h1 {
 .form-control {
 	padding-left: 5px;
 }
+#excluded {
+	display: flex;
+	flex-direction: row-reverse;
+	justify-content: space-between;
+	height: 40px;
+}
 .square {
 	background-color: #FF0000;
-	color: #ffffff;
+	color: #ffffff; 
+	margin-right: 5px;
 	border: none;
-	margin-right: 10px;
 	border-radius: 5px;
+	cursor: pointer;
+	height: 30px;
 }
 .startForm {
 	display: none;
+}
+.excludedExplain {
+	height: 30px;
+	margin-top: -10px;
+	font-weight: 600;
+	font-size: 1.1em;
 }
 .nextPageSection {
 	display: flex;
