--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@ body {
 	line-height: 1;
 	font-family: Helvetica, sans-serif;
 }
-h1 {
-	font-size: 5em;
+.banner h1 {
+	font-size: 3.5em;
 	text-align: center;
 	color: #170F00;
+	width: 80%;
+	margin: 40px auto;
 }
 #introForm {
 	text-align: center;
@@ -60,7 +62,6 @@ h1 {
 	padding: 5px;
 	border: none;
 }
-
 .startForm {
 	display: none;
 	text-align: center;
@@ -94,6 +95,10 @@ h1 {
 	flex-direction: column;
 	width: 40%;
 }
+.searchBoxes h1 {
+	text-align: center;
+	font-size: 3em;
+}
 #searchForm {
 	display: none;
 	margin-top: 20px;
@@ -108,8 +113,7 @@ h1 {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	align-items: center;
-	
+	align-items: center;	
 }
 .column {
 	width: 40%;
@@ -200,11 +204,12 @@ h1 {
 		flex-direction: column;
 	}
 	.mobileBanner h1 {
-		font-size: 3.5em;
-		margin-top: 5px;
+		font-size: 2em;
+		margin-top: 10px auto;
+		text-align: center;
 	}
 	.excludedExplain p {
-		font-size: 0.7em;
+		font-size: 0.8em;
 	}
 	.searchBoxes {
 		margin: 0 auto;
