--- a/style.css
+++ b/style.css
@@ -132,12 +132,12 @@ body {
 	text-decoration: none;
 	font-size: 1.3em;
 	color: #170F00;
-	font-weight: 800;
+	font-weight: 700;
 }
 .printDate {
 	font-size: 1.1em;
 	color: #AA8439; 
-	font-weight: 700;
+	font-weight: 600;
 }
 .form-control {
 	padding-left: 5px;
@@ -237,6 +237,7 @@ body {
 	.mobileHeader p {
 		color: #603D08;
 		font-weight: 600;
+		font-size: 1.1em;
 	}
 	.mobileForm {
 		display: flex;
